// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs separatorStyle: 'BackSlash' 1`] = `
<div>
  <ui5-link
    design="Default"
  >
    Link 1
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    \\
  </ui5-label>
  <ui5-link
    design="Default"
  >
    Link 2
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    \\
  </ui5-label>
  <ui5-link
    design="Default"
  >
    Link 3
  </ui5-link>
</div>
`;

exports[`Breadcrumbs separatorStyle: 'DoubleBackSlash' 1`] = `
<div>
  <ui5-link
    design="Default"
  >
    Link 1
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    \\\\
  </ui5-label>
  <ui5-link
    design="Default"
  >
    Link 2
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    \\\\
  </ui5-label>
  <ui5-link
    design="Default"
  >
    Link 3
  </ui5-link>
</div>
`;

exports[`Breadcrumbs separatorStyle: 'DoubleGreaterThan' 1`] = `
<div>
  <ui5-link
    design="Default"
  >
    Link 1
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    &gt;&gt;
  </ui5-label>
  <ui5-link
    design="Default"
  >
    Link 2
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    &gt;&gt;
  </ui5-label>
  <ui5-link
    design="Default"
  >
    Link 3
  </ui5-link>
</div>
`;

exports[`Breadcrumbs separatorStyle: 'DoubleSlash' 1`] = `
<div>
  <ui5-link
    design="Default"
  >
    Link 1
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    //
  </ui5-label>
  <ui5-link
    design="Default"
  >
    Link 2
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    //
  </ui5-label>
  <ui5-link
    design="Default"
  >
    Link 3
  </ui5-link>
</div>
`;

exports[`Breadcrumbs separatorStyle: 'GreaterThan' 1`] = `
<div>
  <ui5-link
    design="Default"
  >
    Link 1
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    &gt;
  </ui5-label>
  <ui5-link
    design="Default"
  >
    Link 2
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    &gt;
  </ui5-label>
  <ui5-link
    design="Default"
  >
    Link 3
  </ui5-link>
</div>
`;

exports[`Breadcrumbs separatorStyle: 'Slash' 1`] = `
<div>
  <ui5-link
    design="Default"
  >
    Link 1
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    /
  </ui5-label>
  <ui5-link
    design="Default"
  >
    Link 2
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    /
  </ui5-label>
  <ui5-link
    design="Default"
  >
    Link 3
  </ui5-link>
</div>
`;

exports[`Breadcrumbs with currentLocationText 1`] = `
<div>
  <ui5-link
    design="Default"
  >
    Link 1
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    /
  </ui5-label>
  <ui5-link
    design="Default"
  >
    Link 2
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    /
  </ui5-label>
  <ui5-link
    design="Default"
  >
    Link 3
  </ui5-link>
  <ui5-label
    for=""
    style="margin: 0px 0.25rem;"
  >
    /
  </ui5-label>
  <ui5-label
    for=""
  >
    Current Location
  </ui5-label>
</div>
`;
